--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
     
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -24,14 +25,51 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
       
-    - name: Build with Gradle
-      run: ./gradlew build
-
-    - name: Build Debug APK
-      run: ./gradlew assembleDebug
+    - name: Display Gradle and project info
+      run: |
+        echo "Gradle version:"
+        ./gradlew --version
+        echo "Project structure:"
+        ls -la
       
-    - name: Upload APK
+    - name: Build with Gradle (with detailed logs)
+      run: ./gradlew build --info
+      
+    - name: Build Debug APK
+      run: ./gradlew assembleDebug --info
+      
+    - name: Upload Debug APK
       uses: actions/upload-artifact@v3
       with:
         name: app-debug
         path: app/build/outputs/apk/debug/app-debug.apk
+        
+    - name: Build Release APK
+      run: ./gradlew assembleRelease --info
+      
+    - name: Sign Release APK
+      uses: r0adkll/sign-android-release@v1
+      id: sign_app
+      with:
+        releaseDirectory: app/build/outputs/apk/release
+        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+        alias: ${{ secrets.SIGNING_KEY_ALIAS }}
+        keyStorePassword: ${{ secrets.SIGNING_STORE_PASSWORD }}
+        keyPassword: ${{ secrets.SIGNING_KEY_PASSWORD }}
+      env:
+        BUILD_TOOLS_VERSION: "34.0.0"
+        
+    - name: Upload Release APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: app-release
+        path: ${{steps.sign_app.outputs.signedReleaseFile}}
+        
+    - name: Archive Build Logs
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: build-logs
+        path: |
+          app/build/reports/
+          build/reports/
