Initial commit: Project configuration files

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,6 @@ android.nonTransitiveRClass=true
 
 # Set JVM arguments for Gradle
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+
+# Suppress unsupported compileSdk warning
+android.suppressUnsupportedCompileSdk=34
