--- a/gradle.properties
+++ b/gradle.properties
@@ -35,5 +35,5 @@ android.enableD8.desugaring=true
 # Enable resource optimizations
 android.enableR8.fullMode=true
 
-# Explicitly set JDK location for Gradle (for Android Gradle Plugin 8.0+)
-org.gradle.java.home=/nix/store/java-17
+# JDK location is provided by GitHub Actions during build
+# org.gradle.java.home should not be hardcoded for cross-platform compatibility
