Initial commit with virtualization components

--- a/gradle.properties
+++ b/gradle.properties
@@ -36,4 +36,5 @@ android.enableD8.desugaring=true
 android.enableR8.fullMode=true
 
 # JDK location is provided by GitHub Actions during build
-# org.gradle.java.home should not be hardcoded for cross-platform compatibility
+# For local Replit builds, we'll set Java 17 path
+org.gradle.java.home=/path/to/java17
